css/style.css
@import "common.css";
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/* DEBUG */
.debug footer{
    background-color: lightblue;
    height: 3.125rem;
}
.debug .main-nav{
    background-color: lightcoral;
    width: 12.5rem;
}
.debug .main-view header{
    background-color: lightblue;
    height: 3.125rem;
}
.debug .main-view .main-content nav{
    border: 2px dotted lightgreen;
}
.debug .item{
    border: 1px solid black;
    background-color: lightseagreen;
    height: 100px;
}

/* MAIN */

.row-main-viewport{
    display: flex;
}

/* MAIN NAV LEFT */
.main-nav{
    height: calc(100vh - 3.125rem);
    position: relative;
}
.nav-footer{
    position: absolute;
    bottom: 0;
}


/* MAIN view */
.main-view{
    
    width: calc(100% - 12.5rem);
    position: relative;
}
/* main header */
.main-view header{
    text-align: end;
    position: absolute;
    top: 0;
    width: 100%;
    line-height: 3.125rem;
    vertical-align: middle;
}
.main-view header .button{
    display: inline-block;
    padding: .3125rem;
    border: 1px solid white;
    border-radius: .9375rem;
    line-height: normal;
}

/* main CONTENT */
.main-view .main-content{
    padding: .625rem;
    overflow-y: auto;
    height: 100vh;
}
.main-view .main-content nav{
    margin-top: 3.125rem;
    text-align: center;
}
.main-view .main-content li{
    display: inline-block;
}

/*    ITEMS PLAYED */
.main-content .row{
    margin: 0 -0.625rem;
}

.item-1-6{
    width: calc((100% / 6) - 1.25rem);
    margin: .625rem;
}



/* FOOTER */
footer{
    width: 100vw;
    position: fixed;
    bottom: 0;
}
/* 
------------------------
------------------------
    RESPONSIVE
------------------------
------------------------
*/

/* TABLET */
@media screen and (max-width: 1100px) {
    /* .item-1-4{
        width: calc((100% / 4) - 1.25rem);
    } */
}

/* MOBILE M */

@media screen and (max-width: 700px) {
    .item-1-2{
        width: calc((100% / 2) - 1.25rem);
    }
}

/* MOBILE S */

@media screen and (max-width: 600px) {
    
}

